<resources>
    <string name="app_name">Login</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_title">LOGIN</string>
    <string name="login">Login</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="Will_be_implemented_soon">Will be implemented soon</string>
    <string name="password_should_be_greater_than_6"> Password should be greater than 6</string>
    <string name="email">Email</string>
    <string name="show_otp">Show OTP</string>/>
    <string name="otp">OTP</string>
    <string name="please_enter_email">Please Enter Email</string>/>
    <string name="enter_your_name">Enter your Name</string>
<string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="how_you_want_to_be_addressed">How you want to be addressed?</string>
    <string name="gender">Gender :</string>
    <string name="she">SHE</string>
    <string name="he">HE</string>
    <string name="other">Other</string>
    <string name="others">Others</string>
    <string name="signup">Signup</string>
    <string name="SignUp_successfully">Register Successfully</string>
    <string name="Re_enter_password">Re-enter your Password</string>
    <string name="enter_other_name">Enter Other Name</string>
    <string name="please_enter_valid_email">Please enter valid Email</string>
    <string name="password_should_be_same">Password should be same</string>

</resources>